<resources>
    <string name="app_name">S2M Connect</string>
    <string name="msg_login">"This is photoshop\'s version od lorem Ipsum. Proin gravida auctor aliquet"</string>
    <string name="hint_login">Email/Phone</string>
    <string name="signup">Sign Up</string>
    <string name="faq">FAQ</string>
    <string name="terms">Terms of Use</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_text">Did you get an OTP? Enter it below and get started now.</string>
    <string name="otp_not_received_text">Didn\'t received the OTP? </string>
    <string name="otp_again_request_text"><u>request again here</u></string>
    <string name="hint_otp">Enter OTP here</string>
    <string name="text_image">Image</string>
    <string name="text_audio">Audio</string>
    <string name="text_video">Video</string>
    <string name="text_document">Document</string>
    <string name="menu_give_feedback">Give Feedback</string>
    <string name="menu_share">Share Picture/Video</string>
    <string name="menu_call_admin">Call Admin</string>
    <string name="menu_raise_ticket">Raise A Ticket</string>
    <string name="menu_manage_teachers">Manage Teachers</string>
    <string name="menu_school_updates">School Updates</string>
    <string name="menu_broadcast">Broadcast</string>
    <string name="menu_call_coordinator">Call Coordinator</string>
    <string-array name="attachment_menu">
        <item >@string/text_image</item>
        <item >@string/text_audio</item>
        <item >@string/text_video</item>
        <item >@string/text_document</item>
    </string-array>
    <string-array name="home_menu_teacher">
        <item >@string/menu_give_feedback</item>
        <item >@string/menu_share</item>
        <item >@string/menu_call_admin</item>
    </string-array>
    <string-array name="home_menu_coordinator">
        <item >@string/menu_raise_ticket</item>
        <item >@string/menu_manage_teachers</item>
        <item >@string/menu_call_admin</item>
    </string-array>
    <string-array name="home_menu_school_admin">
        <item >@string/menu_give_feedback</item>
        <item >@string/menu_school_updates</item>
        <item >@string/menu_call_admin</item>
    </string-array>
    <string-array name="home_menu_s2m_admin">
        <item >@string/menu_broadcast</item>
        <item >@string/menu_raise_ticket</item>
        <item >@string/menu_call_coordinator</item>
    </string-array>
    <string name="phone_number_button">Phone number button</string>
    <string name="otp_button">OTP button</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component title is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="action_archive">Archive</string>
    <string name="schools_prompt">Choose a country</string>
    <string name="others">Others</string>
    <string-array name="school_names">
        <item>The Shri Ram School, Vasant Vihar / Moulsari</item>
        <item>The Cathedral and John Connon School, Mumbai</item>
        <item>Mallya Aditi International School, Bangalore</item>
        <item>Vasant Valley School, Delhi</item>
        <item>Sulochanadevi Singhania School, Thane, Mumbai</item>
        <item>Step by Step School, Noida</item>
        <item>Springdales School, Dhaula Kuan, Delhi</item>
        <item>The Shri Ram School, Aravali, Gurgaon</item>
        <item>The Heritage School, Gurgaon</item>
        <item>Inventure Academy, Bangalore</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_school_detail">SchoolDetailActivity</string>
      <string name="school_msg_one">
        There are many variations of Passages of Lorem Ipsum available.
    </string>
    <string name="school_msg_two">
        Clipping views enables you to easily change the shape of a view.
        You can clip views for consistency with other design elements or to change the shape of a view in response to user input.
        You can clip a view to its outline area using the View.setClipToOutline() method or the android:clipToOutline attribute.
        Only rectangle, circle, and round rectangle outlines support clipping, as determined by the Outline.canClip() method.
        There are many variations of Passages of Lorem Ipsum available,
        but the majority have suffered alteration in some form by injected humor.</string>
    <string name="cd_btn_home">Home Button</string>
    <string name="cd_btn_section">Section Button</string>
    <string name="cd_btn_messages">Messages Button</string>
    <string name="cd_btn_video">Video Button</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dsgasdf">dsgasdf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_notification">Notification</string>
    <string name="text_intro_training"><b>Introductory</b> Trainings </string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="options_feedback_1">It has survived not only five centuries, but also the leap</string>
    <string name="options_feedback_2">It has survived not only five centuries</string>
    <string name="options_feedback_3">What a crazy day, today is!</string>
    <string name="options_feedback_4">It has survived not only six centuries, but also the leap</string>
    <string name="options_feedback_down_1">It\'s boring</string>
    <string name="options_feedback_down_2">Toooo big</string>
    <string name="options_feedback_down_3">Not clear</string>
    <string name="options_feedback_down_4">Not satisfied</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_archive">Archive</string>
    <string name="prompt_select_school">Select School</string>
    <string name="prompt_select_teacher">Select Teacher</string>
    <string name="prompt_select_milestones">Milestones</string>
    <string name="blank_int">%d</string>
    <string name="retry">Retry</string>
    <string name="cancel">@android:string/cancel</string>
</resources>