<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_landing"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".landing.LandingActivity"
    tools:showIn="@layout/app_bar_landing">

    <FrameLayout
        android:id="@+id/layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom"/>
    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_home"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:width="0dip"
            android:contentDescription="@string/cd_btn_home"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_button_home" />

        <ImageButton
            android:id="@+id/button_section"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:width="0dip"
            android:contentDescription="@string/cd_btn_section"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_button_section" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:width="0dip"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <ImageButton
            android:id="@+id/button_messages"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:width="0dip"
            android:contentDescription="@string/cd_btn_messages"
            android:padding="11dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_button_msgs" />

        <ImageButton
            android:id="@+id/button_video"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:width="0dip"
            android:contentDescription="@string/cd_btn_video"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_button_video" />

    </LinearLayout>


</RelativeLayout>
